feat: POC async projection for score board
